@@ -3,7 +3,7 @@ dnl $Id: configure.in 409 2004-06-07 21:10:20Z roms $
 
 dnl Init.
 AC_PREREQ(2.57)
-AC_INIT(TiEmu, 2.00-rc3, [tiemu-users@lists.sourceforge.net])
+AC_INIT(TiEmu, 2.00-rc5, [tiemu-users@lists.sourceforge.net])
 
 AM_INIT_AUTOMAKE([dist-bzip2])
 AM_MAINTAINER_MODE
@@ -159,6 +159,40 @@ case $host_os in
   fi
   ;;
 esac
+
+# Check for the new -fvisibility=hidden flag introduced in gcc 4.0
+# Allow to reduce shared library size and avoid symbol clash
+case $host_os in
+*mingw*)
+  ;;
+*)
+        if test x$GCC = xyes; then
+           visibility_flag=''
+           AC_MSG_CHECKING([whether gcc accepts -fvisibility])
+           if test -z "$ac_cv_prog_CC"; then
+              our_gcc="$CC"
+           else
+              our_gcc="$ac_cv_prog_CC"
+           fi
+           if $our_gcc -v --help 2>/dev/null | grep "fvisibility" >/dev/null; then
+              visibility_flag='-fvisibility=hidden'
+           fi
+           if test x"$visibility_flag" = x ; then
+              AC_MSG_RESULT([no])
+           else
+              CFLAGS="$CFLAGS $visibility_flag"
+              AC_MSG_RESULT([${visibility_flag}])
+              AC_DEFINE(HAVE_FVISIBILITY, 1, [Use -fvisibility=hidden flag])
+            fi
+        fi
+        ;;
+esac
+
+case "$host" in
+  *-*-linux*) EXFL="-Wl,--export-dynamic" ;;
+  *)          EXFL="" ;;
+esac
+LDFLAGS="$LDFLAGS $EXFL"
 
 # some extra flags
 CFLAGS="$CFLAGS -DGTK_DISABLE_DEPRECATED -DDEBUGGER"
