@@ -28,7 +28,7 @@
     <widget class="GtkMenuItem" id="send_file_to_tiemu1">
       <property name="visible">True</property>
       <property name="tooltip" translatable="yes">Send the selected file to the emulator. This file can be of any type (single, group, backup, FLASH app or FLASH OS).</property>
-      <property name="label" translatable="yes">Send _file to TIEmu</property>
+      <property name="label" translatable="yes">Send _file to TiEmu...</property>
       <property name="use_underline">True</property>
       <signal name="activate" handler="on_send_file_to_tiemu1_activate" last_modification_time="Sun, 24 Apr 2005 17:00:05 GMT"/>
       <accelerator key="F10" modifiers="0" signal="activate"/>
@@ -48,7 +48,7 @@
     <widget class="GtkCheckMenuItem" id="recv_file_from_tiemu1">
       <property name="visible">True</property>
       <property name="tooltip" translatable="yes">Uncheck it if you are running program which use the linkport for sound.</property>
-      <property name="label" translatable="yes">Receive file from TiEmu</property>
+      <property name="label" translatable="yes">_Listen for files sent from TiEmu</property>
       <property name="use_underline">True</property>
       <property name="active">True</property>
       <signal name="activate" handler="on_recv_file_from_tiemu1_activate" last_modification_time="Sun, 24 Apr 2005 17:00:05 GMT"/>
@@ -269,7 +269,7 @@
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">Med LCD update</property>
 	      <property name="use_underline">True</property>
-	      <property name="active">False</property>
+	      <property name="active">True</property>
 	      <property name="group">high_lcd_update1</property>
 	      <signal name="activate" handler="on_med_lcd_update1_activate" last_modification_time="Wed, 11 May 2005 14:21:37 GMT"/>
 	    </widget>
@@ -280,7 +280,7 @@
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">Low LCD update</property>
 	      <property name="use_underline">True</property>
-	      <property name="active">False</property>
+	      <property name="active">True</property>
 	      <property name="group">high_lcd_update1</property>
 	      <signal name="activate" handler="on_low_lcd_update1_activate" last_modification_time="Wed, 11 May 2005 14:16:04 GMT"/>
 	    </widget>
@@ -307,7 +307,7 @@
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">_Large view (x2)</property>
 	      <property name="use_underline">True</property>
-	      <property name="active">False</property>
+	      <property name="active">True</property>
 	      <property name="group">normal_view1</property>
 	      <signal name="activate" handler="on_large_view1_activate" last_modification_time="Fri, 14 May 2004 15:28:18 GMT"/>
 	    </widget>
@@ -318,7 +318,7 @@
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">_Full screen</property>
 	      <property name="use_underline">True</property>
-	      <property name="active">False</property>
+	      <property name="active">True</property>
 	      <property name="group">normal_view1</property>
 	      <signal name="activate" handler="on_full_view1_activate"/>
 	    </widget>
@@ -329,7 +329,7 @@
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">Custom view</property>
 	      <property name="use_underline">True</property>
-	      <property name="active">False</property>
+	      <property name="active">True</property>
 	      <property name="group">normal_view1</property>
 	      <signal name="activate" handler="on_custom_view1_activate" last_modification_time="Sun, 05 Jun 2005 08:47:19 GMT"/>
 	    </widget>
@@ -440,7 +440,7 @@
 	      <accelerator key="H" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image74">
+		<widget class="GtkImage" id="image86">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-help</property>
 		  <property name="icon_size">1</property>
@@ -463,7 +463,7 @@
 	      <accelerator key="M" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image75">
+		<widget class="GtkImage" id="image87">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-index</property>
 		  <property name="icon_size">1</property>
@@ -554,7 +554,7 @@
 	      <signal name="activate" handler="on_bugreport1_activate" last_modification_time="Sun, 20 Feb 2005 17:58:57 GMT"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image76">
+		<widget class="GtkImage" id="image88">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-execute</property>
 		  <property name="icon_size">1</property>
