@@ -37,20 +37,41 @@
 #include "version.h"
 #include "tilibs.h"
 #include "engine.h"
+#include "support.h"
 
-gint display_about_dbox()
+static const char* authors[] =  
 {
-	GladeXML *xml;
-	GtkWidget *dbox, *label;
-	GtkTextBuffer *txtbuf;
-	GtkWidget *text;
+	"Romain Lievin (Linux/Win32) <roms@tilp.info>", 
+	"Kevin Kofler  (gdb & Linux/Win32) <kevin@tigcc.ticalc.org>", 
+	"Christian Walther (Mac OS-X) <cwalther@gmx.ch>",
+	NULL 
+};
+
+static const char* documenters[] = 
+{
+	"Romain Lievin (Linux/Win32) <roms@tilp.info>", 
+	NULL
+};
+
+static const char* artists[] = 
+{
+	"Jaime Fernando Meza Meza (icon & skin design)",
+	"hibou/hiboo (logo)",
+	NULL
+};
+
+gint display_about_dbox(void)
+{
+	GtkWidget* widget;
+	GtkAboutDialog* dlg;
+	GdkPixbuf *pix;
+
+	struct stat stbuf;
 	FILE *fd;
 	gchar *filename;
+	int len = 0;
 	gchar buffer[32768];
-	gint len = 0;
-	struct stat stbuf;
 	gchar *version;
-	gint result;
 
 #ifdef __WIN32__
 	filename = g_strconcat(inst_paths.base_dir, "License.txt", NULL);
@@ -58,53 +79,43 @@ gint display_about_dbox()
 	filename = g_strconcat(inst_paths.base_dir, "COPYING", NULL);
 #endif				/*  */
 
-	if (access(filename, F_OK) == 0) {
-		if (stat(filename, &stbuf) != -1) {
+	if (access(filename, F_OK) == 0) 
+	{
+		if (stat(filename, &stbuf) != -1) 
+		{
 			len = stbuf.st_size;
 			len -= 2;
 		}
-		if ((fd = fopen(filename, "r")) != NULL) {
+		if ((fd = fopen(filename, "r")) != NULL) 
+		{
 			memset(buffer, 0, sizeof(buffer));
 			len = fread(buffer, 1, len, fd);
 			fclose(fd);
 		}
 	}
 
-	xml = glade_xml_new
-	    (tilp_paths_build_glade("about-2.glade"), "about_dbox",
-	     PACKAGE);
-	if (!xml)
-		g_error(_("%s: GUI loading failed !\n"), __FILE__);
-	glade_xml_signal_autoconnect(xml);
+	version = g_strdup_printf(_("Framework version (cables=%s, files=%s, calcs=%s)"),
+	     ticable_get_version(), tifiles_get_version(), ticalc_get_version());
 
-	dbox = glade_xml_get_widget(xml, "about_dbox");
-	label = glade_xml_get_widget(xml, "label5");
-	version = g_strdup_printf
-	    (_("* TiEmu version %s (cables=%s, files=%s, calcs=%s)"),
-	     TIEMU_VERSION, ticable_get_version(), tifiles_get_version(),
-	     ticalc_get_version());
-	gtk_label_set_text(GTK_LABEL(label), version);
-	g_free(version);
+	//---
 
-	text = glade_xml_get_widget(xml, "textview1");
-	txtbuf = gtk_text_view_get_buffer(GTK_TEXT_VIEW(text));
-	gtk_text_buffer_set_text(txtbuf, buffer, len);
-	gtk_widget_realize(dbox);
-	gtk_widget_show(dbox);
-	gtk_window_resize(GTK_WINDOW(dbox), 640, 480);
+	widget = gtk_about_dialog_new();
+	dlg = GTK_ABOUT_DIALOG(widget);
+	pix = create_pixbuf("logo.xpm");
 
-	while (gtk_events_pending())
-		gtk_main_iteration();
+	gtk_about_dialog_set_name(dlg, "TiEmu - Ti Emulator - ");
+	gtk_about_dialog_set_version(dlg, TIEMU_VERSION);
+	gtk_about_dialog_set_comments(dlg, version);
+	gtk_about_dialog_set_copyright(dlg, "Copyright (c) 1999-2005 The TiEmu Team");
+	gtk_about_dialog_set_license(dlg, buffer);
+	gtk_about_dialog_set_website(dlg, "http://lpg.ticalc.org/prj_tiemu");
+	gtk_about_dialog_set_authors(dlg, authors);
+	gtk_about_dialog_set_documenters(dlg, documenters);
+	gtk_about_dialog_set_artists(dlg, artists);
+	gtk_about_dialog_set_logo(dlg, pix);
 
-	result = gtk_dialog_run(GTK_DIALOG(dbox));
-	switch (result) {
-	case GTK_RESPONSE_OK:
-		break;
-	default:
-		break;
-	}
-
-	gtk_widget_destroy(dbox);
+	//gtk_show_about_dialog(NULL, "");
+	gtk_widget_show_all(widget);
 
 	return 0;
 }
