@@ -381,9 +381,14 @@ void rcfile_read(void)
 	  else if(!strcmp(p, "full")) options.view = VIEW_FULL;
 	  else if(!strncmp(p, "custom", strlen("custom"))) 
 	  {
+		  char *q;
 		  options.view = VIEW_CUSTOM;
 		  p=find_str(buffer, "view_mode=custom");
+		  q = strchr(p, ',');
+		  if(q) *q = '.';
 		  sscanf(p, " (%f)", &(options.scale));
+		  if(options.scale < 0.01)
+			  options.scale = 1.0;
 	  }
 	  else stop(l);
 	  continue;
