@@ -1,6 +1,12 @@
 SubVersion: $Id$
 
-- 23/06/2005, version 2.00
+- 25/06/2005, version 2.00:
+	- [roms] $1552: replaced my hand-made about box by the generic one provided with GTK 2.6
+	- [roms] $1560: TiEMu can be exited from the cross (WM)
+	- [roms] $1664: fixed 'backing pixmap problem' (bug #1227433): the scale factor
+		was not retrieved fine from .ini file when the ratio contains ',' instead of '.'
+
+- 23/06/2005, version 2.00-rc5:
 	- [roms] $1525: merged Kevin's change in rev $1524 (recfile).
 	//- [roms] $1526: cancel button
 	- [roms] $1543: fixed 'Receive file' check item.
